[gd_scene load_steps=9 format=3 uid="uid://cl6dp3j4tapgy"]

[ext_resource type="Texture2D" uid="uid://cqclvc1cpptso" path="res://assets/images/misil/misil1.png" id="1_6amq2"]
[ext_resource type="Script" path="res://assets/scripts/misil.gd" id="1_wmhh8"]
[ext_resource type="Texture2D" uid="uid://bnvrdoilpsxim" path="res://assets/images/misil/misil2.png" id="2_2oddf"]
[ext_resource type="Texture2D" uid="uid://o3wolib3orel" path="res://assets/images/misil/misil3.png" id="3_34yuc"]
[ext_resource type="Texture2D" uid="uid://b7rrfrvrtvq6f" path="res://assets/images/misil/misil4.png" id="4_asa3f"]
[ext_resource type="AudioStream" uid="uid://cindqirkhfban" path="res://assets/sounds/death.mp3" id="6_gdkmp"]

[sub_resource type="SpriteFrames" id="SpriteFrames_7cdpw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_6amq2")
}, {
"duration": 1.0,
"texture": ExtResource("2_2oddf")
}, {
"duration": 1.0,
"texture": ExtResource("3_34yuc")
}, {
"duration": 1.0,
"texture": ExtResource("4_asa3f")
}],
"loop": true,
"name": &"shootingmisil",
"speed": 30.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ql00b"]
size = Vector2(48, 16)

[node name="misil" type="Area2D" groups=["Misil"]]
script = ExtResource("1_wmhh8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.55, 0.55)
sprite_frames = SubResource("SpriteFrames_7cdpw")
animation = &"shootingmisil"
autoplay = "shootingmisil"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-22, 0)
scale = Vector2(0.75, 0.75)
shape = SubResource("RectangleShape2D_ql00b")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-11, -1)
scale = Vector2(2.1, 0.9)

[node name="PlayerDestroyed" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_gdkmp")
volume_db = 8.6

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
